--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()  // Maven Central repository
         jcenter()
         
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.android.tools.build:gradle:7.3.1'
         
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()  // Maven Central repository
         jcenter()
         
     }
